--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
-Flask>=2.0
-Flask-SQLAlchemy>=2.5
-Flask-Login>=0.5
-Werkzeug>=2.0
-PyMySQL
-Pillow>=9.0                 
-captcha>=0.4               
-python-dotenv>=0.19
-gunicorn                       
+blinker==1.9.0
+captcha==0.7.1
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.1
+gunicorn==23.0.0
+importlib_metadata==8.6.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
+pillow==11.2.1
+PyMySQL==1.1.1
+python-dotenv==1.1.0
+SQLAlchemy==2.0.40
+typing_extensions==4.13.2
+Werkzeug==3.1.3
+zipp==3.21.0
