--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+mysql-connector-python==9.3.0
 packaging==25.0
 pillow==11.2.1
 PyMySQL==1.1.1
